--- a/index.html
+++ b/index.html
@@ -104,11 +104,15 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">About me</h2>
+                    <p class="lead">Hi there, I'm David. A salesman who's fascinated with the potential of software,
+                      I'm currently a student at the <a target="_blank" href="http://turing.io/">Turing School of
+                      Software and Design</a>. For 27 weeks I'm learning how to tell stories with Ruby, Rails, HTML,
+                      CSS and Javascript. I enrolled at Turing to gain the technical skills required to serve as a
+                      full stack web developer with client facing responsibilities.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/headshot.jpg" alt="">
                 </div>
             </div>
 
@@ -126,8 +130,14 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">What else?</h2>
+                    <p class="lead">Prior to Turing, I served in roles ranging from Project Management with a nonprofit to
+                        leading the sales efforts at a startup. I would love to launch my career with a software consultancy
+                        that allows me to work in a variety of languages and technologies.
+                        <br>
+                        <br>
+                        Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
+                        cautiously wondering if this is the year the Cubs finally win it all.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
@@ -149,7 +159,8 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <p class="lead">Explore the links below to get to know me better. Think I might be a good fit for your
+                      team? That's great! Send me an email and I'll get back to you.</a></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/phones.png" alt="">
