--- a/index.html
+++ b/index.html
@@ -130,17 +130,25 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">What else?</h2>
-                    <p class="lead">Prior to Turing, I served in roles ranging from Project Management with a nonprofit to
-                        leading the sales efforts at a startup. I would love to launch my career with a software consultancy
-                        that allows me to work in a variety of languages and technologies.
-                        <br>
-                        <br>
-                        Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
-                        cautiously wondering if this is the year the Cubs finally win it all.</p>
+                    <h2 class="section-heading">How can we work together?</h2>
+                    <p class="lead">Explore the links below to get to know me better. Think I might be a good fit for your
+                      team? That's great! Send me an email and I'll get back to you.</p>
+                    <br>
+                    <p class="lead text-center">
+                      <a target="_blank" href="mailto:dastinnette@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">Email</span></a>
+                    </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">What else?</h2>
+                    <p class="lead">Prior to Turing, I served in roles ranging from Project Management with a nonprofit to
+                      leading the sales efforts at a startup. I would love to launch my career with a software consultancy
+                      that allows me to work in a variety of languages and technologies.
+                      <br>
+                      <br>
+                      Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
+                      cautiously wondering if this is the year the Cubs finally win it all.</p>
                 </div>
             </div>
 
@@ -149,29 +157,6 @@
 
     </div>
     <!-- /.content-section-b -->
-
-    <div class="content-section-a">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">Explore the links below to get to know me better. Think I might be a good fit for your
-                      team? That's great! Send me an email and I'll get back to you.</a></p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-a -->
 
 	<a  name="contact"></a>
     <div class="banner">
