Update email link

--- a/index.html
+++ b/index.html
@@ -131,11 +131,13 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">How can we work together?</h2>
-                    <p class="lead">Explore the links below to get to know me better. Think I might be a good fit for your
+                    <p class="lead">Explore the social links below to get to know me better. Think I might be a good fit for your
                       team? That's great! Send me an email and I'll get back to you.</p>
                     <br>
                     <p class="lead text-center">
-                      <a target="_blank" href="mailto:dastinnette@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">Email</span></a>
+                      <i class="fa fa-envelope-o fa-2x"></i>
+                      <br>
+                      <a target="_blank" href="mailto:dastinnette@gmail.com">dastinnette@gmail.com</a>
                     </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
