--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg"><i class="fa fa-github"></i> <span class="network-name"></span></a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg"><i class="fa fa-linkedin"></i> <span class="network-name"></span></a>
                             </li>
                         </ul>
                     </div>
