--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
+                                <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg round"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg"><i class="fa fa-github"></i> <span class="network-name"></span></a>
+                                <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg round"><i class="fa fa-github"></i> <span class="network-name"></span></a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg"><i class="fa fa-linkedin"></i> <span class="network-name"></span></a>
+                                <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg round"><i class="fa fa-linkedin"></i> <span class="network-name"></span></a>
                             </li>
                         </ul>
                     </div>
@@ -112,7 +112,7 @@
                       full stack web developer with client facing responsibilities.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/headshot.jpg" alt="">
+                    <img class="img-responsive img-thumbnail" src="img/headshot.jpg" alt="">
                 </div>
             </div>
 
