--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">How can we work together?</h2>
-                    <p class="lead">Explore the social links below to get to know me better. Think I might be a good fit for your
-                      team? That's great! Send me an email and I'll get back to you.</p>
-                    <br>
+                    <p class="lead">Explore the social links in the banner below to get to know me better. Think I
+                      might be a good fit for your company? That's great! I'd love to discuss the opportunity and determine
+                      how I can best contribute to the team. Send me an email and I'll get back to you.</p>
                     <p class="lead text-center">
                       <i class="fa fa-envelope-o fa-2x"></i>
                       <br>
