Final content changes

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">What else?</h2>
-                    <p class="lead">Prior to Turing, I served in roles ranging from Project Management with a nonprofit to
-                      leading the sales efforts at a startup. I would love to launch my career with a software consultancy
-                      that allows me to work in a variety of languages and technologies.
+                    <p class="lead">Prior to Turing, I served in roles ranging from leading the sales efforts at a
+                      startup to cycling from Seattle to Washington D.C. with a nonprofit. I would love to launch
+                      my career with a software consultancy that allows me to work in a variety of languages and technologies.
                       <br>
                       <br>
                       Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
