--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg round"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
+                                <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg round"><i class="fa fa-github"></i> <span class="network-name"></span></a>
+                                <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-github"></i> <span class="network-name"></span></a>
                             </li>
                             <li>
-                                <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg round"><i class="fa fa-linkedin"></i> <span class="network-name"></span></a>
+                                <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-linkedin"></i> <span class="network-name"></span></a>
                             </li>
                         </ul>
                     </div>
@@ -146,7 +146,8 @@
                     <h2 class="section-heading">What else?</h2>
                     <p class="lead">Prior to Turing, I served in roles ranging from leading the sales efforts at a
                       startup to cycling from Seattle to Washington D.C. with a nonprofit. I would love to launch
-                      my career with a software consultancy that allows me to work in a variety of languages and technologies.
+                      my career with a software consultancy that allows me to learn and work in a variety of languages
+                      and technologies.
                       <br>
                       <br>
                       Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
@@ -172,13 +173,13 @@
                 <div class="col-lg-8">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                     </ul>
                 </div>
