Selling myself like a mufuckin bawss

--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <h2 class="section-heading">About me</h2>
                     <p class="lead">Hi there, I'm David. A salesman who's fascinated with the potential of software,
                       I'm currently a student at the <a target="_blank" href="http://turing.io/">Turing School of
-                      Software and Design</a>. For 27 weeks I'm learning how to tell stories with Ruby, Rails, HTML,
-                      CSS and Javascript. I enrolled at Turing to gain the technical skills required to serve as a
-                      full stack web developer with client facing responsibilities.</p>
+                      Software and Design</a>. For 27 weeks I'm learning how to tell stories with Ruby, Rails, Javascript,
+                      HTML, and CSS. I would love to launch my career at a software consultancy that allows me
+                      to work directly with clients and learn a variety of languages and technologies.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive img-thumbnail" src="img/headshot.jpg" alt="">
@@ -145,13 +145,12 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">What else?</h2>
                     <p class="lead">Prior to Turing, I served in roles ranging from leading the sales efforts at a
-                      startup to cycling from Seattle to Washington D.C. with a nonprofit. I would love to launch
-                      my career with a software consultancy that allows me to learn and work in a variety of languages
-                      and technologies.
+                      startup to marketing ops at a software company that was acquired by Salesforce to cycling from
+                      Seattle to Washington D.C. with a nonprofit.
                       <br>
                       <br>
                       Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
-                      cautiously wondering if this is the year the Cubs finally win it all.</p>
+                      cautiously wondering if this is the year the Cubs finally win it all. Spoiler alert ... it isn't.</p>
                 </div>
             </div>
 
