--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#services">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -63,7 +63,6 @@
 
 
     <!-- Header -->
-    <a name="about"></a>
     <div class="intro-header">
         <div class="container">
 
@@ -96,19 +95,18 @@
 
     <!-- Page Content -->
 
-	<a  name="services"></a>
+	<a  name="about"></a>
     <div class="content-section-a">
 
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">About me</h2>
                     <p class="lead">Hi there, I'm David. A salesman who's fascinated with the potential of software,
                       I'm currently a student at the <a target="_blank" href="http://turing.io/">Turing School of
                       Software and Design</a>. For 27 weeks I'm learning how to tell stories with Ruby, Rails, Javascript,
-                      HTML, and CSS. I would love to launch my career at a software consultancy that allows me
+                      HTML and CSS. I would love to launch my career at a software consultancy that allows me
                       to work directly with clients and learn a variety of languages and technologies.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
@@ -117,48 +115,9 @@
             </div>
 
         </div>
-        <!-- /.container -->
-
     </div>
     <!-- /.content-section-a -->
 
-    <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">How can we work together?</h2>
-                    <p class="lead">Explore the social links in the banner below to get to know me better. Think I
-                      might be a good fit for your company? That's great! I'd love to discuss the opportunity and determine
-                      how I can best contribute to the team. Send me an email and I'll get back to you.</p>
-                    <p class="lead text-center">
-                      <i class="fa fa-envelope-o fa-2x"></i>
-                      <br>
-                      <a target="_blank" href="mailto:dastinnette@gmail.com">dastinnette@gmail.com</a>
-                    </p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <hr class="section-heading-spacer">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">What else?</h2>
-                    <p class="lead">Prior to Turing, I served in roles ranging from leading the sales efforts at a
-                      startup to marketing ops at a software company that was acquired by Salesforce to cycling from
-                      Seattle to Washington D.C. with a nonprofit.
-                      <br>
-                      <br>
-                      Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
-                      cautiously wondering if this is the year the Cubs finally win it all. Spoiler alert ... it isn't.</p>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-b -->
 
 	<a  name="contact"></a>
     <div class="banner">
@@ -167,7 +126,7 @@
 
             <div class="row">
                 <div class="col-lg-4">
-                    <h2>Connect with me:</h2>
+                    <h2>Connect with me</h2>
                 </div>
                 <div class="col-lg-8">
                     <ul class="list-inline banner-social-buttons">
@@ -180,6 +139,9 @@
                         <li>
                             <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
+                        <li>
+                            <a target="_blank" href="mailto:dastinnette@gmail.com" class="btn btn-default btn-lg btn-outline"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">Email</span></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -188,6 +150,39 @@
         <!-- /.container -->
 
     </div>
+
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Let's connect</h2>
+                    <p class="lead">If you think I might be a good fit for your company, I'd love to discuss the
+                      opportunity and determine how I can best contribute to the team. Reach out and I'll
+                      get back to you right away.</p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Background</h2>
+                    <p class="lead">Prior to Turing, I served in roles ranging from leading the sales efforts at a
+                      startup to marketing ops at a software company that was acquired by Salesforce to cycling from
+                      Seattle to Washington D.C. with a nonprofit.
+                      <br>
+                      <br>
+                      Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
+                      cautiously wondering if this is the year the Cubs finally win it all. Spoiler alert... it isn't.</p>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
+
     <!-- /.banner -->
 
     <!-- Footer -->
@@ -201,7 +196,7 @@
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a href="#services">About</a>
+                            <a href="#about">About</a>
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
