--- a/index.html
+++ b/index.html
@@ -32,37 +32,6 @@
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-        <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand topnav" href="#"></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-
-    <!-- Header -->
     <div class="intro-header">
         <div class="container">
 
@@ -71,7 +40,6 @@
                     <div class="intro-message">
                         <h1>David Stinnette</h1>
                         <h3>(business + software) developer</h3>
-                        <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
                                 <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
@@ -88,130 +56,78 @@
             </div>
 
         </div>
-        <!-- /.container -->
-
     </div>
-    <!-- /.intro-header -->
 
-    <!-- Page Content -->
-
-	<a  name="about"></a>
     <div class="content-section-a">
-
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">About me</h2>
-                    <p class="lead">Hi there, I'm David. A salesman who's fascinated with the potential of software,
-                      I'm currently a student at the <a target="_blank" href="http://turing.io/">Turing School of
-                      Software and Design</a>. For 27 weeks I'm learning how to tell stories with Ruby, Rails, Javascript,
-                      HTML and CSS. I would love to launch my career at a software consultancy that allows me
-                      to work directly with clients and learn a variety of languages and technologies.</p>
+                    <p class="lead">
+                      Hi I'm David, a software salesperson turned engineer. No
+                      longer speaking at conferences and client pitches, I'm now
+                      telling stories with Rails and JavaScript.
+                    </p>
+                      <ul class="lead">
+                        <li>
+                          Prior to software development, I led a team of
+                          cyclists in a cross country trek from Seattle to DC to
+                          raise money for people with disabilities
+                        </li>
+                        <li>
+                          I bring a strong work eithic, experience navigating
+                          teams through demanding projects, and five years
+                          history achieving business goals
+                        </li>
+                        <li>
+                          I've grown to value well-tested code, highly
+                          collaborative teams, and opportunities for mentorship
+                          and growth
+                        </li>
+                      </ul>
+                      <p class="lead">
+                        If you're looking for a developer to contribute on a
+                        motivated team, I'd love to talk with you.
+                      </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive img-thumbnail" src="img/headshot.jpg" alt="">
+                  <div class="dummy"></div>
+                  <div class="img-container">
+                    <img class="img-thumbnail" src="img/headshot.jpg" />
+                  </div>
                 </div>
             </div>
-
         </div>
     </div>
-    <!-- /.content-section-a -->
 
+  <div class="banner">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-4">
+                  <h2>Connect with me</h2>
+              </div>
+              <div class="col-lg-8">
+                  <ul class="list-inline banner-social-buttons">
+                      <li>
+                          <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="mailto:dastinnette@gmail.com" class="btn btn-default btn-lg btn-outline"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">Email</span></a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </div>
 
-	<a  name="contact"></a>
-    <div class="banner">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-4">
-                    <h2>Connect with me</h2>
-                </div>
-                <div class="col-lg-8">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                        <li>
-                            <a target="_blank" href="mailto:dastinnette@gmail.com" class="btn btn-default btn-lg btn-outline"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">Email</span></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-
-
-    <div class="content-section-b">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Let's connect</h2>
-                    <p class="lead">If you think I might be a good fit for your company, I'd love to discuss the
-                      opportunity and determine how I can best contribute to the team. Reach out and I'll
-                      get back to you right away.</p>
-                </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Background</h2>
-                    <p class="lead">Prior to Turing, I served in roles ranging from leading the sales efforts at a
-                      startup to marketing ops at a software company that was acquired by Salesforce to cycling from
-                      Seattle to Washington D.C. with a nonprofit.
-                      <br>
-                      <br>
-                      Outside of work I'm a big fan of hiking, camping, cycling and baseball. I stay up at night
-                      cautiously wondering if this is the year the Cubs finally win it all. Spoiler alert... it isn't.</p>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
-    </div>
-    <!-- /.content-section-b -->
-
-    <!-- /.banner -->
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <ul class="list-inline">
-                        <li>
-                            <a href="#">Top</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li class="footer-menu-divider">&sdot;</li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
 </body>
