--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     <div class="intro-message">
                         <h1>David Stinnette</h1>
                         <h3>(business + software) developer</h3>
+                        <br>
                         <ul class="list-inline intro-social-buttons">
                             <li>
                                 <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-twitter"></i> <span class="network-name"></span></a>
@@ -72,13 +73,13 @@
                       <ul class="lead">
                         <li>
                           Prior to software development, I led a team of
-                          cyclists in a cross country trek from Seattle to DC to
+                          cyclists on a cross country trek from Seattle to DC to
                           raise money for people with disabilities
                         </li>
                         <li>
-                          I bring a strong work eithic, experience navigating
+                          I bring a strong work eithic, knowledge navigating
                           teams through demanding projects, and five years
-                          history achieving business goals
+                          experience achieving business goals
                         </li>
                         <li>
                           I've grown to value well-tested code, highly
@@ -88,7 +89,7 @@
                       </ul>
                       <p class="lead">
                         If you're looking for a developer to contribute on a
-                        motivated team, I'd love to talk with you.
+                        motivated team, I'd love to speak with you.
                       </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
