Added blog link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/landing-page.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -67,18 +67,13 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">About me</h2>
                     <p class="lead">
-                      Hi I'm David, a software salesperson turned engineer. No
-                      longer speaking at conferences and client pitches, I'm now
-                      telling stories with Rails and JavaScript.
+                      Hi I'm David, a software salesperson turned engineer. I'm
+                      still helping people solve problems, I'm just doing it
+                      differently by telling stories with Rails and JavaScript.
                     </p>
                       <ul class="lead">
                         <li>
-                          Prior to software development, I led a team of
-                          cyclists on a cross country trek from Seattle to DC to
-                          raise money for people with disabilities
-                        </li>
-                        <li>
-                          I bring a strong work eithic, knowledge navigating
+                          I bring a strong work ethic, knowledge navigating
                           teams through demanding projects, and five years
                           experience achieving business goals
                         </li>
@@ -86,6 +81,11 @@
                           I've grown to value well-tested code, highly
                           collaborative teams, and opportunities for mentorship
                           and growth
+                        </li>
+                        <li>
+                          In my past life I led the sales team at a startup, led
+                          a cycling team on a cross country fundraising trek,
+                          and worked construction while in college
                         </li>
                       </ul>
                       <p class="lead">
@@ -112,16 +112,19 @@
               <div class="col-lg-8">
                   <ul class="list-inline banner-social-buttons">
                       <li>
-                          <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                          <a target="_blank" href="https://medium.com/@dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-medium fa-fw"></i> </a>
                       </li>
                       <li>
-                          <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                          <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-twitter fa-fw"></i> </a>
                       </li>
                       <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                          <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-github fa-fw"></i> </a>
                       </li>
                       <li>
-                          <a target="_blank" href="mailto:dastinnette@gmail.com" class="btn btn-default btn-lg btn-outline"><i class="fa fa-envelope-o fa-fw"></i> <span class="network-name">Email</span></a>
+                          <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-linkedin fa-fw"></i> </a>
+                      </li>
+                      <li>
+                          <a target="_blank" href="mailto:dastinnette@gmail.com" class="btn btn-default btn-lg btn-outline"><i class="fa fa-envelope-o fa-fw"></i> </a>
                       </li>
                   </ul>
               </div>
