--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>David Stinnette</h1>
-                        <h3>(business + software) developer</h3>
+                        <h2>(business + software) developer</h2>
                         <br>
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -50,6 +50,9 @@
                             </li>
                             <li>
                                 <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-linkedin"></i> <span class="network-name"></span></a>
+                            </li>
+                            <li>
+                                <a target="_blank" href="https://medium.com/@dastinnette" class="btn btn-default btn-lg round btn-outline"><i class="fa fa-medium"></i> <span class="network-name"></span></a>
                             </li>
                         </ul>
                         <br>
