Updated personal site

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-6"></div>
+                <div class="col-lg-6">
                     <div class="intro-message">
                         <h1>david stinnette</h1>
                         <h2>(business + software) developer</h2>
@@ -58,82 +59,12 @@
                         <br>
                     </div>
                 </div>
-            </div>
+            </div><br><br><br><br><br><br><br><br><br><br><br><br>
 
         </div>
     </div>
 
-    <div class="content-section-a">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-sm-6">
-                    <div class="clearfix"></div>
-                    <h2 class="section-heading">Hi, I'm David</h2>
-                    <p class="lead">
-                      I'm a former software salesperson turned engineer. I'm
-                      still helping people solve problems, I'm just doing it by
-                      telling stories with JavaScript and Rails.
-                    </p>
-                      <ul class="lead">
-                        <li>
-                          I bring a strong work ethic, knowledge navigating
-                          teams through demanding projects, and five years
-                          experience achieving business goals
-                        </li>
-                        <li>
-                          I've grown to value well-tested code, highly
-                          collaborative teams, and opportunities for mentorship
-                          and growth
-                        </li>
-                        <li>
-                          In my past life I led the sales team at a startup, led
-                          a cycling team on a cross country fundraising trek,
-                          and worked construction while in college
-                        </li>
-                      </ul>
-                      <p class="lead">
-                        If you're looking for a software engineer to contribute 
-                        on a motivated team, I'd love to speak with you.
-                      </p>
-                </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                  <div class="dummy"></div>
-                  <div class="img-container">
-                    <img class="img-thumbnail" src="img/headshot.jpg" />
-                  </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-  <div class="banner">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-4">
-                  <h2>connect with me</h2>
-              </div>
-              <div class="col-lg-8">
-                  <ul class="list-inline banner-social-buttons">
-                      <li>
-                          <a target="_blank" href="https://medium.com/@dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-medium fa-fw"></i> </a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="https://twitter.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-twitter fa-fw"></i> </a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="https://github.com/dastinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-github fa-fw"></i> </a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="https://www.linkedin.com/in/dstinnette" class="btn btn-default btn-lg btn-outline"><i class="fa fa-linkedin fa-fw"></i> </a>
-                      </li>
-                      <li>
-                          <a target="_blank" href="mailto:dastinnette@gmail.com" class="btn btn-default btn-lg btn-outline"><i class="fa fa-envelope-o fa-fw"></i> </a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-  </div>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
