--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="col-lg-6">
                     <div class="intro-message">
                         <h1>david stinnette</h1>
-                        <h2>(business + software) developer</h2>
+                        <h2>software (developer + instructor)</h2>
                         <br>
                         <ul class="list-inline intro-social-buttons">
                             <li>
